--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ before_script:
   - docker build -t docker-moodle .
 
 script:
+  - docker run -d --name DB -p 3306:3306 -e MYSQL_DATABASE=moodle -e MYSQL_USER=moodle -e MYSQL_PASSWORD=moodle centurylink/mysql
+  - docker run -d -P --name moodle --link DB:DB -p 8080:80 jauer/moodle
   - docker ps
 
 after_script:
