--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
 
 script:
   - docker run -d --name DB -p 3306:3306 -e MYSQL_DATABASE=moodle -e MYSQL_USER=moodle -e MYSQL_PASSWORD=moodle centurylink/mysql
-  - docker run -d -P --name moodle --link DB:DB -p 8080:80 jauer/moodle
+  - docker run -d -P --name moodle --link DB:DB -p 8080:80 docker-moodle
   - docker ps
 
 after_script:
