--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 #  - docker build -t docker-moodle .
   - git clone https://github.com/radioberry/docker-moodle.git
   - ls
-  - docker ps
+  - docker ps -a
 #  - docker-compose build
 
 before_script:
@@ -23,6 +23,8 @@ before_script:
   - docker-compose up -d
 
 script:
+  - docker ps
+  - sleep 10
   - docker ps
   - curl --version
   - curl localhost:8080
