--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   https-portal:
-    image: steveltn/https-portal:v1.1.1
+    image: steveltn/https-portal:latest
     ports:
       - '80:80'
       - '443:443'
