--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - moodle_db
     restart: always
     environment:
-      DOMAINS: 'localhost -> http://moodle'
+      DOMAINS: 'example.com -> http://moodle'
       # STAGE: 'production'
       # FORCE_RENEW: 'true'
   moodle:
@@ -18,13 +18,13 @@ services:
     depends_on:
       - moodle_db
     environment:
-      MOODLE_URL: "http://localhost"
+      MOODLE_URL: "http://example.com"
       DB_PORT_3306_TCP_ADDR: moodle_db
       DB_ENV_MYSQL_USER: moodle
       DB_ENV_MYSQL_PASSWORD: moodle
       DB_ENV_MYSQL_DATABASE: moodle
-    # ports:
-    #   - "8080:80"
+    ports:
+      - "8080:80"
     restart: always
 
   moodle_db:
