--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
 VIRTUAL_HOST=example.com
 LETSENCRYPT_HOST=example.com
 LETSENCRYPT_EMAIL=info@example.com
+
+MOODLE_URL=http://example.com
+
+DB_PORT_3306_TCP_ADDR=moodle_db
+MYSQL_ROOT_PASSWORD=moodle
+DB_ENV_MYSQL_USER=moodle
+DB_ENV_MYSQL_PASSWORD=moodle
+DB_ENV_MYSQL_DATABASE=moodle
