--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ VIRTUAL_HOST=example.com
 LETSENCRYPT_HOST=example.com
 LETSENCRYPT_EMAIL=info@example.com
 
-MOODLE_URL=http://example.com
+MOODLE_URL=http://localhost:8080
 
 DB_PORT_3306_TCP_ADDR=moodle_db
 MYSQL_ROOT_PASSWORD=moodle
