config SSL false

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,13 @@ services:
   moodle:
     build:
       context: ./ver/v3.1.5
-      args:
-        - BOOL_REVERSEPROXY='false'
-        - BOOL_SSLPROXY='false'
-        - MOODLE_URL="http://localhost"
     image: moodle:v3.1.5
     container_name: moodle
     links:
       - moodle_db
     env_file: .env
     environment:
-      # MOODLE_URL: "http://localhost"
+      MOODLE_URL: "http://localhost"
       DB_PORT_3306_TCP_ADDR: moodle_db
       DB_ENV_MYSQL_USER: moodle
       DB_ENV_MYSQL_PASSWORD: moodle
@@ -21,8 +17,6 @@ services:
     ports:
       - "80:80"
     restart: always
-    # volumes:
-    #   - .data/moodledata:/var/moodledata
   moodle_db:
     image: centurylink/mysql:latest
     container_name: moodle_db
